fix sticky footer issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ h3 {
     margin-right: 5vw;
   }
   .site {
-    display: block;
+    display: auto;
     flex-flow: none;
     min-height: 0px;
   }
